demo/src/main/java/com/example/demo/todolist/error/BaseExceptionType.java
package com.example.demo.todolist.error;

import org.springframework.http.HttpStatus;

public interface BaseExceptionType {

    int getErrorCode();

    HttpStatus getHttpStatus();

    String getErrorMessage();
}
